--- a/wagesystem/pom.xml
+++ b/wagesystem/pom.xml
@@ -29,6 +29,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
+			<version>1.3.0.RC1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
