--- a/jm-parent/jm-api/pom.xml
+++ b/jm-parent/jm-api/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.jm</groupId>
 	<artifactId>jm-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>jm-api</name>
