--- a/jm-parent/jm-wages/pom.xml
+++ b/jm-parent/jm-wages/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.jm</groupId>
 	<artifactId>jm-wages</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>jm-wages</name>
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>com.jm</groupId>
 		<artifactId>jm-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0</version>
 	</parent>
 
 	<properties>
