--- a/jm-parent/pom.xml
+++ b/jm-parent/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.jm</groupId>
 	<artifactId>jm-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 
 	<packaging>pom</packaging><!--父类的打包方式必须是pom-->
 
